objects/FieldServiceBulletin__c.object
<CustomObject>
    <fields>
        <fullName>AssessedNumberofIntalledProducts__c</fullName>
        <label>Assessed Number of Installed Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AssessedNumberofWOforCompletion__c</fullName>
        <label>Assessed Number of WO for Completion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOXMessage__c</fullName>
        <formula>IMAGE(&quot;/resource/SR_Q216_FSB_BOXMessage&quot;, &apos;box message&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;BOXMessage&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChangeStatusMessage__c</fullName>
        <formula>IMAGE(&quot;/resource/SR_Q216_FSB_ChangeSatus&quot;, &apos;change status message&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;ChangeStatusMessage&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompletionDate__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CostCenter__c</fullName>
        <label>Cost Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountofWorkOrdersForecasted__c</fullName>
        <label>Count of Work Orders Forecasted</label>
        <summaryForeignKey>ImpactedInstalledProductFollowup__c.FieldServiceBulletin__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CustomerRisk__c</fullName>
        <description>Q2 2016 Release : Notes to bFO</description>
        <label>Customer Risk</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Q2 2016 Release : Notes to bFO</description>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DetailedinformationofFSB__c</fullName>
        <formula>&apos;Detailed information of FSB Implementation is under Country Management Responsibility&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;Detailed information of FSB&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentDeliveryDueDate__c</fullName>
        <label>Due Date for FSB Release</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DocumentProofreadingStatus__c</fullName>
        <label>Document Proofreading Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent to Proofreaders</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DueDatetoCompleteImplementation__c</fullName>
        <label>Due Date to Complete Implementation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EndOfSectionStatus1Message__c</fullName>
        <formula>IMAGE(&quot;/resource/SR_Q216_FSB_EndofSection1Msg&quot;, &apos;spares section message&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;EndOfSectionStatus1Message&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndofSection4Message__c</fullName>
        <formula>iMAGE(&quot;/resource/SR_Q216_FSB_EndofSection4Mesg&quot;, &apos;spares section message&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;EndofSection4Message&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnoughsparepartsorderedforVIPs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enough spare parts ordered for VIPs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSBApprovalStatus__c</fullName>
        <label>FSB Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Potential FSB</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSBApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Q2 2016 Release : Notes to bFO</description>
        <label>FSB Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Field_Service_Bulletins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSBCompletionProofreadingDate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FSB Completion Proofreading</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSBEmailDate__c</fullName>
        <label>FSB Communication to Countries Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSBEmailedbyL3FSETechnicalSupport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FSB Emailed by L3 FSE Technical Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSBFinalVersionBoxLink__c</fullName>
        <label>FSB Box Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FSBGoNoGoSectionMessage__c</fullName>
        <formula>IMAGE(&quot;/resource/SR_Q216_FSB_FSBGoNoGoSectionMessage&quot;, &apos;spares section message&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;FSBGoNoGoSectionMessage&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSBNumber__c</fullName>
        <displayFormat>FSB-{000000}</displayFormat>
        <label>FSB Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>FSBProofreadingStatus__c</fullName>
        <label>FSB Proofreading Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSBwithServiceSpares__c</fullName>
        <formula>HYPERLINK( $Label.CLQ216I2P18 &amp; &quot;?pv0=&quot; &amp; Id , &quot;Report&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FSB with Service Spares</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Family</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>OPP_Product__c.HierarchyType__c</field>
                <operation>equals</operation>
                <value>PM0-FAMILY</value>
            </filterItems>
            <filterItems>
                <field>$User.BypassVR__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OPP_Product__c</referenceTo>
        <relationshipLabel>Field Service Bulletins (Family)</relationshipLabel>
        <relationshipName>Field_Service_Bulletins1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GLAccount__c</fullName>
        <inlineHelpText>General Ledger Account.</inlineHelpText>
        <label>GL Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeographicalImpact__c</fullName>
        <label>Geographical Impact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>Worldwide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GeographicalScope__c</fullName>
        <inlineHelpText>Need to define for each region the quantity of installed product forecast and service spare parts forecast.
Example: Specificity on US part</inlineHelpText>
        <label>Geographical Scope</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GlobalCostofModificationink__c</fullName>
        <inlineHelpText>If more than 100KE a technical risk should be open</inlineHelpText>
        <label>Global Cost of Modification</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ImpactedInstalledProductFollowup__c</fullName>
        <formula>HYPERLINK( $Label.CLQ216I2P17 &amp; &quot;?pv0=&quot; &amp;  Id , &quot;Report&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Impacted Installed Product Follow-up</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImplementationStrategy__c</fullName>
        <label>Implementation Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>For Information</fullName>
                </value>
                <value>
                    <fullName>Fix Upon Failure</fullName>
                </value>
                <value>
                    <fullName>Next Visit</fullName>
                </value>
                <value>
                    <fullName>Immediate Action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IstheSolutionFeasibleonSite__c</fullName>
        <description>Q2  2016 release</description>
        <label>Is the Solution Feasible on Site</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Defined Yet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsthereaSolution__c</fullName>
        <description>Q2  2016 release</description>
        <label>Is there a Solution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Defined Yet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Number__c</fullName>
        <label>Legacy Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfAffectedProducts__c</fullName>
        <description>Roll-up Summary to count the number of FSB Affected Products added</description>
        <label>Number Of Affected Products</label>
        <summaryForeignKey>FSBAffectedProduct__c.FieldServiceBulletin__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberOfFSBTeamMembers__c</fullName>
        <description>Q2 2016  Release : Notes to BFO</description>
        <label>Number Of FSB Team Members</label>
        <summaryForeignKey>FSBTeam__c.FieldServiceBulletin__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PartandSpecialToolsRecommended__c</fullName>
        <label>Part and Special Tools Recommended</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Undefined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Problem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Problem</label>
        <referenceTo>Problem__c</referenceTo>
        <relationshipLabel>Field Service Bulletins</relationshipLabel>
        <relationshipName>Field_Service_Bulletins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductLine__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product Line</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>OPP_Product__c.ProductFamily__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>OPP_Product__c.ProductLine__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <infoMessage>Please add a product at the Product Line level.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OPP_Product__c</referenceTo>
        <relationshipLabel>Field Service Bulletins</relationshipLabel>
        <relationshipName>Field_Service_Bulletins</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proofreading_Date__c</fullName>
        <label>Proofreading Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Status Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ReplacedbynewFSB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Replaced by new FSB</label>
        <referenceTo>FieldServiceBulletin__c</referenceTo>
        <relationshipLabel>Previous Field Service Bulletins</relationshipLabel>
        <relationshipName>Field_Service_Bulletins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <inlineHelpText>Severity of the Field Service Bulletin:

10 - Safety Related
7 - Significant/High
5 - Moderately Significant
3 - Minor
1 - Insignificant</inlineHelpText>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Insignificant / Low</fullName>
                    <label>Insignificant</label>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Moderately Significant</fullName>
                </value>
                <value>
                    <fullName>Significant / High</fullName>
                    <label>Significant/High</label>
                </value>
                <value>
                    <fullName>Safety related</fullName>
                    <label>Safety Related</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SignOffDecisionComment__c</fullName>
        <label>Sign Off Decision Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SignOffDecision__c</fullName>
        <label>Sign Off Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved for Execution</fullName>
                </value>
                <value>
                    <fullName>Rejected - To be re-worked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SparePartsAllocationRulesIfneeded__c</fullName>
        <label>Spare Parts Allocation Rules (If needed)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SparePartsCreationOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Creator of a new reference in spare part catalog</inlineHelpText>
        <label>New Spare Part Creator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Field_Service_Bulletins1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SparePartsMessage__c</fullName>
        <formula>IMAGE(&quot;/resource/SR_Q216_FSB_SparePartsMessage&quot;, &apos;spares section message&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;SparePartsMessage&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SparePartsToolsAvailability__c</fullName>
        <label>Spare Parts &amp; Tools Availability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Undefined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SparePartsToolsAvailable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spare Parts &amp; Tools Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SparePartsToolsLeadTime__c</fullName>
        <label>Spare Parts &amp; Tools Lead Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SparePartsToolsSolutionSelected__c</fullName>
        <label>Spare Parts &amp; Tools Solution Selected</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>StatusFlow__c</fullName>
        <formula>image(&quot;/resource/&quot; 
&amp; Case( 
TEXT(Status__c),
&apos;1. New&apos; ,&quot;SR_Q216_FSB_New&quot;,
&apos;2. Go/NoGo Decision Pending&apos; ,&quot;SR_Q216_FSB_GoNoGoDecisionPending&quot;,
&apos;3a. Document in progress&apos;,&quot;SR_Q216_FSB_DocumentInProgress&quot;,
&apos;3b. Cancelled&apos;,&quot;SR_Q216_FSB_Cancelled&quot;,
&apos;4. Pending Final Approval&apos;,&quot;SR_Q216_FSB_PendingFinalApproval&quot;,
&apos;5. Execution&apos;,&quot;SR_Q216_FSB_Execution&quot;,
&apos;6. Completed&apos;,&quot;SR_Q216_FSB_Completed&quot;,
&apos;7. Obsolete&apos;,&quot;SR_Q216_FSB_Obsolete&quot;
,&apos;&apos;)
,&quot;Status&quot;, 175,650)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Flow</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Q2 2016 Release : Notes to bFO</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. New</fullName>
                    <default>true</default>
                    <label>1. New</label>
                </value>
                <value>
                    <fullName>2. Go/NoGo Decision Pending</fullName>
                </value>
                <value>
                    <fullName>3a. Document in progress</fullName>
                </value>
                <value>
                    <fullName>3b. Cancelled</fullName>
                </value>
                <value>
                    <fullName>4. Pending Final Approval</fullName>
                </value>
                <value>
                    <fullName>5. Execution</fullName>
                </value>
                <value>
                    <fullName>6. Completed</fullName>
                </value>
                <value>
                    <fullName>7. Obsolete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StorageinSKM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Storage in SKM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TechnicalRiskNumberReady__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Q2 2016 Release :  Notes to bFO</description>
        <label>Technical Risk Number Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TechnicalRisknumber__c</fullName>
        <label>Technical Risk number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechnicalSolutionSelectedIfseveral__c</fullName>
        <label>Go/No Go Decision Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Temp_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1. New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>2. Go/NoGo Decision Pending</fullName>
                    <label>Go/No Go decision pending</label>
                </value>
                <value>
                    <fullName>3a. Document in progress</fullName>
                    <label>Document in progress</label>
                </value>
                <value>
                    <fullName>4. Pending Final Approval</fullName>
                    <label>Pending final approval</label>
                </value>
                <value>
                    <fullName>5. Execution</fullName>
                    <label>Execution</label>
                </value>
                <value>
                    <fullName>6. Completed</fullName>
                    <label>Completed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TypeofDocumenttoGenerate__c</fullName>
        <description>Go/No-Go Decision</description>
        <label>Go/No-Go Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Go</fullName>
                </value>
                <value>
                    <fullName>No Go</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VIPisImpacted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the issue came from VIP site, check this box</inlineHelpText>
        <label>Detected from VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ValidationDate__c</fullName>
        <label>Validation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ValidationtoReleaseQV__c</fullName>
        <label>Quality Validation to Release</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WarningMessageApproverBlank__c</fullName>
        <formula>IF( NumberOfAffectedProducts__c &gt; 0 &amp;&amp;  ISBLANK(FSBApprover__c) , IMAGE(&quot;/resource/SR_Q216_FSB_Warning&quot;, &apos;warning&apos;),&apos;&apos; )</formula>
        <label>&lt;WarningMessageApproverBlank&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WarningMessageQC__c</fullName>
        <formula>IF( ISBLANK(FSBApprover__c) , IMAGE(&quot;/resource/SR_Q216_FSB_Warning&quot;, &apos;warning&apos;),&apos;&apos; )</formula>
        <label>&lt;WarningMessageApproverBlank&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WarningSeverityLow__c</fullName>
        <formula>IF( OR(ISPICKVAL(Severity__c, &apos;Minor&apos;), ISPICKVAL(Severity__c, &apos;Insignificant / Low&apos;)) , IMAGE(&quot;/resource/SR_Q216_FSB_SeverityLow&quot;, &apos;warning&apos;),&apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;WarningSeverityLow&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WhoSupportsCost__c</fullName>
        <label>Who Supports Cost?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LOB via Technical Risk</fullName>
                </value>
                <value>
                    <fullName>Countries</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Field Service Bulletin</label>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Classic_FSB</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Severity__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ProductLine__c</columns>
        <columns>Description__c</columns>
        <filterScope>Mine</filterScope>
        <label>Classic FSB</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Details</fullName>
        <columns>NAME</columns>
        <columns>Problem__c</columns>
        <columns>Description__c</columns>
        <columns>ProductLine__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductLine__c</field>
            <operation>equals</operation>
        </filters>
        <label>Details</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EcoBuildings</fullName>
        <columns>NAME</columns>
        <columns>Severity__c</columns>
        <columns>Status__c</columns>
        <columns>ProductLine__c</columns>
        <columns>Problem__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>FSBFinalVersionBoxLink__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductLine__c</field>
            <operation>startsWith</operation>
            <value>PT</value>
        </filters>
        <label>EcoBuildings</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Service Bulletins</pluralLabel>
    <recordTypes>
        <fullName>FieldServiceBulletinProblemRecordType</fullName>
        <active>true</active>
        <label>Field Service Bulletin - Problem Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieldServiceBulletinProductRecordType</fullName>
        <active>true</active>
        <label>Field Service Bulletin - Product Record Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VR_Q216_Change_the_SignOffDecision</fullName>
        <active>true</active>
        <description>change the Sign Off Decision, the following conditions must be met, error messages shall be shown to the user when conditions are not met</description>
        <errorConditionFormula>IF(AND(NOT( $User.BypassVR__c ),
				ISCHANGED (SignOffDecision__c), 
	   OR(
					NOT(	ISPICKVAL(DocumentProofreadingStatus__c , &apos;Approved&apos;)), 
	    NOT(ISPICKVAL(Status__c , &apos;4. Pending Final Approval&apos;))
		)
  ),
			true ,false)</errorConditionFormula>
        <errorMessage>To change the Sign Off Decision, the following conditions must be met: Documents Proofreading Status is equal to ‘Approved’ and FSB Status is ‘Pending Final Approval’</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Q216_FSBPendingtobeCancelled</fullName>
        <active>true</active>
        <description>Q2 2016 Release : The Field Service Bulletin Status must be moved to Cancelled as the selected document type is not FSB</description>
        <errorConditionFormula>AND( NOT($User.BypassVR__c) , OR(ISPICKVAL(Status__c , &apos;3a. Document in progress&apos;) , ISPICKVAL(Status__c , &apos;4. Pending Final Approval&apos;) , ISPICKVAL(Status__c , &apos;5. Execution&apos;) , ISPICKVAL(Status__c , &apos;6. Completed&apos;)), ISPICKVAL( TypeofDocumenttoGenerate__c , &apos;Pending&apos;), NOT(ISPICKVAL( TypeofDocumenttoGenerate__c , &apos;&apos;)))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Please change the Go/No-Go Decision to either &quot;Go&quot; or &quot;No Go&quot; before trying to move the Status to Document In Progress.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Q216_FSB_Status_Execution</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT($User.BypassVR__c ),ISCHANGED(Status__c),
				ISPICKVAL( Status__c , &apos;5. Execution&apos;), 
	   NOT( ISPICKVAL( SignOffDecision__c , &apos;Approved for Execution&apos;))
      )</errorConditionFormula>
        <errorMessage>To move an FSB to status ‘5. Execution’: ‘Sign Off Decision’ has to be ‘Approved for Execution’.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Q216_FSBtobeCancelled</fullName>
        <active>true</active>
        <description>Q2 2016 Release : The Field Service Bulletin Status must be moved to Cancelled as the selected document type is not FSB</description>
        <errorConditionFormula>AND( NOT($User.BypassVR__c) , OR(ISPICKVAL(Status__c , &apos;3a. Document in progress&apos;) , ISPICKVAL(Status__c , &apos;4. Pending Final Approval&apos;) , ISPICKVAL(Status__c , &apos;5. Execution&apos;) , ISPICKVAL(Status__c , &apos;6. Completed&apos;)), ISPICKVAL( TypeofDocumenttoGenerate__c , &apos;No Go&apos;), NOT(ISPICKVAL( TypeofDocumenttoGenerate__c , &apos;&apos;)))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>The Field Service Bulletin Status must be moved to Cancelled as the Go/No-Go Decision is not Go</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Q216_NameChange</fullName>
        <active>true</active>
        <description>Q2 2016 Release : FSB Name cannot be modified beyond Satus &apos;4. Pending Document Approval.&apos;</description>
        <errorConditionFormula>AND( NOT($User.BypassVR__c) , OR(ISPICKVAL(Status__c , &apos;4. Pending Final Approval&apos;) , ISPICKVAL(Status__c , &apos;5. Execution&apos;) , ISPICKVAL(Status__c , &apos;6. Completed&apos;)),   ISCHANGED(Name))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>FSB Name cannot be modified beyond Satus &apos;4. Pending Document Approval.&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Q216_NotApproved</fullName>
        <active>true</active>
        <description>Q2 2016 Release : The FSB document must be validated by the Line of Business Quality Manager to change the status to &apos;4. Pending Final Approval&apos; or any further status. Please update &apos; Document Proofreading Status&apos; field.</description>
        <errorConditionFormula>AND( NOT($User.BypassVR__c) , OR(ISPICKVAL(Status__c , &apos;4. Pending Final Approval&apos;) , ISPICKVAL(Status__c , &apos;5. Execution&apos;) , ISPICKVAL(Status__c , &apos;6. Completed&apos;)) , NOT(ISPICKVAL( DocumentProofreadingStatus__c , &apos;Approved&apos;)))</errorConditionFormula>
        <errorDisplayField>DocumentProofreadingStatus__c</errorDisplayField>
        <errorMessage>The FSB document must be validated by the Line of Business Quality Manager to change the status to &apos;4. Pending Final Approval&apos; or any further status. Please update &apos; Document Proofreading Status&apos; field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Q216_ReasonMandatoryforCancel</fullName>
        <active>true</active>
        <description>Q2 2016 Release : Please enter a reason for cancelling the Field Service Bulletin.</description>
        <errorConditionFormula>AND(NOT( $User.BypassVR__c ) ,  ISPICKVAL(Status__c, &apos;3b. Cancelled&apos;) ,  ISBLANK(Reason__c)  )</errorConditionFormula>
        <errorDisplayField>Reason__c</errorDisplayField>
        <errorMessage>Please enter a reason for cancelling the Field Service Bulletin.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Q216_ReasonMandatoryforObsolete</fullName>
        <active>true</active>
        <description>Q2 2016 Release : Please provide a Reason to set the status to Obsolete.</description>
        <errorConditionFormula>AND(NOT( $User.BypassVR__c ) ,  ISPICKVAL(Status__c, &apos;7. Obsolete&apos;) ,  ISBLANK(Reason__c)  )</errorConditionFormula>
        <errorDisplayField>Reason__c</errorDisplayField>
        <errorMessage>Please provide a Reason to set the status to Obsolete.</errorMessage>
    </validationRules>
</CustomObject>